# CoursePilot

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml  start.ps1
.github/workflows/: quality.yml
.streamlit/: config.toml
coursepilot/: __init__.py  __main__.py  app.py  file_store.py  material_store.py  reliability.py
coursepilot/agent_runtime/: __init__.py  core.py
coursepilot/agents/: __init__.py  core.py  specialists.py
coursepilot/config/: __init__.py  settings.py
coursepilot/database/: __init__.py  schema.py
coursepilot/ingestion/: __init__.py  documents.py  sync.py
coursepilot/integrations/: __init__.py  openai_vector_store.py
coursepilot/models/: __init__.py  contracts.py
coursepilot/observability/: __init__.py  core.py
coursepilot/repositories/: __init__.py  conversations.py  courses.py  materials.py  workspace.py
coursepilot/retrieval/: __init__.py  local.py  policy.py  search.py
coursepilot/services/: __init__.py  courses.py  (+5 more)
doc/: acceptance-evidence.md  architecture-design.md  module-design.md  performance-baseline.md  system-requirements.md  task.md  todolist.md
scripts/: benchmark.py  check.ps1
tests/: __init__.py  test_agents.py  test_app_flow.py  test_assignment_artifacts.py  test_cli.py  test_config.py  test_conversations.py  test_courses.py  test_database.py  test_delivery.py  test_file_store.py  test_ingestion.py  test_local_material_library.py  test_material_sync.py  test_models.py  test_openai_vector_store.py  test_optimization.py  test_retrieval.py  test_specialists.py  test_startup.py  test_workspace.py
(+3 files in other folders)
