[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "coursepilot"
version = "0.1.0"
description = "Agent-based course learning assistant"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openai-agents>=0.18,<1",
    "openai>=2.45,<3",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
    "pymupdf>=1.26,<2",
    "python-pptx>=1.0,<2",
    "streamlit>=1.49,<2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16,<2",
    "pytest>=8.4,<9",
    "ruff>=0.12,<1",
]

[project.scripts]
coursepilot = "coursepilot.__main__:main"

[tool.setuptools.packages.find]
include = ["coursepilot*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["coursepilot"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
